<resources>
    <string name="app_name">App Lock</string>
    <string name="this_action_have_ads">This activity may contain advertising</string>
    <string name="welcome_app_lock">Welcome to\nAppLock</string>
    <string name="set_passcode">Set passcode</string>
    <string name="create">Create</string>
    <string name="six_digit_pin">6-Digit PIN</string>
    <string name="four_digit_pin">4-digit PIN</string>
    <string name="pattern">Pattern</string>
    <string name="knock_code">Knock Code</string>
    <string name="create_6_digit_pin">Create 6-Digit PIN</string>
    <string name="create_4_digit_pin">Create 4-Digit PIN</string>
    <string name="create_pattern">Create Pattern</string>
    <string name="create_4_6_touches">Create 4-6 touches.</string>
    <string name="confirm">Confirm</string>
    <string name="password_does_not_match">Does not match !</string>
    <string name="password_length_error">Connect at least 4 dots. Try again...</string>
    <string name="skip">Skip</string>
    <string name="preview_one_title">"Protect your privacy "</string>
    <string name="preview_one_dec">"Take control of your privacy by locking\n your apps with multiple lock options. "</string>
    <string name="preview_two_title">Friendly Interface</string>
    <string name="preview_two_dec">"Beautiful and simple interface,\nso you can perform any task easily. "</string>
    <string name="preview_three_title">"Compatible with all devices  "</string>
    <string name="preview_thee_dec">The app works smoothly on all devices while\n maintaining performance and functionality.</string>
    <string name="get_started">Get started</string>
    <string name="all" translatable="false">All</string>
    <string name="new_app" translatable="false">New apps</string>
    <string name="system_app" translatable="false">System apps</string>
    <string name="lock_all_app">Lock all apps</string>
    <string name="search_app">Search</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_to_unlock">Confirm to unlock all ?</string>
    <string name="unlock">Unlock</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlock</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>
    <string name="newest">Newest</string>
    <string name="oldEst">Oldest</string>
    <string name="request_access">Request access</string>
    <string name="grant_permission_to_protected">Grant permission “AppLock” to protect your privacy</string>
    <string name="usage_access">Usage access</string>
    <string name="show_up_on_other_app">Show up on other apps</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend">Recommend</string>
    <string name="select_app_to_protected">Select app to be protected</string>
    <string name="security" translatable="false">Security</string>
    <string name="lock_screen">Lock screen</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="pin">PIN</string>
    <string name="pattern_setting">Pattern Setting</string>
    <string name="relock_setting">Re-lock setting</string>
    <string name="after_exit">After exit</string>
    <string name="always">Always</string>
    <string name="after_screen_lock">After screen is locked</string>
    <string name="ten_seconds">10 seconds</string>
    <string name="thirty_seconds">30 seconds</string>
    <string name="ont_minius">1 munite</string>
    <string name="three_minius">3 munites</string>
    <string name="five_minius">5 munites</string>
    <string name="ten_minius">10 munites</string>
    <string name="unlock_animation">Unlock Animation</string>
    <string name="swipe_top">Swipe Top</string>
    <string name="change_pattern">Change Pattern</string>
    <string name="hide_pattern_trails">Hide Pattern Trails</string>
    <string name="pin_setting">PIN Setting</string>
    <string name="create_pin">Create your PIN</string>
    <string name="keyboard_random">Keyboard random</string>
    <string name="keyboard_random_dec">When AppLocker locks apps with PIN,  the keyboard will be shuffled.</string>
    <string name="create_your_knock_code">Create your Knock Code</string>
    <string name="lock_frequency">Lock Frequency</string>
    <string name="cancelLabel">Cancel</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_fade_out">Fade Out</string>
    <string name="random">Random</string>
    <string name="tab_lock" translatable="false">Lock</string>
    <string name="theme" translatable="false">Theme</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="set_knock_code">Set Knock Code</string>
    <string name="create_password_success">Create password success</string>
    <string name="biometric_unavailable">Biometric features are currently unavailable.</string>
    <string name="reset">Reset</string>
    <string name="pin_incorrect">Pin incorrect</string>
    <string name="pattern_incorrect">Pattern incorrect</string>
    <string name="knock_incorrect">Knock Code incorrect</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="use_biometric_label">Use biometrics</string>
    <string name="biometric_prompt_message">Use your biometrics to unlock</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="text_hardware_not_detected">Fingerprint scanner not detected on device</string>
    <string name="text_add_lock_fingerprint">Add lock fingerprint to your phone and settings</string>
    <string name="text_add_one_finger">You must add at least one fingerprint to use this feature</string>
    <string name="text_cancel_finger">Scan fingerPrint canceled</string>
    <string name="fingerprint_error">Can\'t authenticate</string>
    <string name="text_default_instruction">Touch the fingerprint sensor</string>
    <string name="text_erro_not_reconized">Not recognized</string>
    <string name="notification_protecting_description">Lock your apps to protect your privacy.</string>
    <string name="notification_permission_need_title">Enable permission to protection</string>
    <string name="notification_permission_need_description">Please enable your permissions to use app locker.</string>
    <string name="notification_protecting_title">Protecting your apps</string>
    <string name="change">Change</string>
    <string name="fake_icon">Fake Icons</string>
    <string name="fake_icon_dec">Disguise apps as another app on \n the home screen</string>
    <string name="label_default">Default</string>
    <string name="photos">Photos</string>
    <string name="save">Save</string>
    <string name="fake_cover" translatable="false">Fake Cover</string>
    <string name="cleaner" translatable="false">Cleaner</string>
    <string name="fake_app_icons" translatable="false">Fake app  Icons</string>
    <string name="web_browser" translatable="false">Web Browser</string>
    <string name="location_based_lock" translatable="false">Location based-lock</string>
    <string name="time_based_lock" translatable="false">Time-based lock</string>
    <string name="wifi_based_lock" translatable="false">Wifi-based lock</string>
    <string name="capture_intruder" translatable="false">Capture Intruders</string>
    <string name="your_app_is_stopped">Unfortunately, your app is stopped.</string>
    <string name="ok">OK</string>
    <string name="fake_cover_tutorial">Long pressing <font color='#4543FE'>"OK"</font> button will reveal the lock screen, while normal tap will return to home screen. When AppLocker detects a locked app opening, instead of showing the usual lock screen, it displays a screen that lets the user think that the app is crashed.</string>
    <string name="recommend_signals">Recommend signals</string>
    <string name="the_operation_could_not_be_completed">"The operation couldn't be completed. (WDGeneralNetworkError 500) "</string>
    <string name="error_something_went_wrong">"Error! Something went wrong. Please try again "</string>
    <string name="an_error_occured_while_loading_file">"We're sorry…An error occurred while loading your files "</string>
    <string name="connected_lost">Connection lost! Please try again</string>
    <string name="intruders_selfie_enable">Intruder Selfie Enabled</string>
    <string name="take_picture_intruder">Take pictures of intruders that tries to open the lock mutiple times. Recomended for maximum security.</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="on_wrong_unlock">on wrong unlock attempts</string>
    <string name="after_time">After %d times</string>
    <string name="search_browser">Search for or enter a URL</string>
    <string name="social_media">Social media</string>
    <string name="entertainment">News &amp; Entertainment</string>
    <string name="shopping">Shopping</string>
    <string name="google">Google</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="app_1">App 1</string>
    <string name="no_intruder_found">No intruders found.</string>
    <string name="intruder_count">%d intruders</string>
    <string name="intruder_records">Intruder Records</string>
    <string name="intruder_details">Intruder Details</string>
    <string name="app_name_label">App name</string>
    <string name="lock_try_count">Lock try count</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="empty_description_location_base_lock">Tap the “Lock” icon the right side of app to lock.</string>
    <string name="radius">Radius</string>
    <string name="inverse">Inverse</string>
    <string name="edit">Edit</string>
    <string name="radius_inverse">Radius (Inverse)</string>
    <string name="empty_title_location_base_lock">There is no app locked !</string>
    <string name="message_explain_require_location_permission">Due to Google’s policies, to use Wi-Fi schedules, please set location access to Allow all the time</string>
    <string name="text_why_need_location_permission">Why should I grant this permission ?</string>
    <string name="detail_message_explain_require_location_permission">In order to turn schedules on and off, App Lock needs location access to tell which network you connected to while the app is in the background. Don’t worry, the networks you connect to are not stored or used in any other way.</string>
    <string name="text_choose_wifi_networks">Choose Wi-Fi networks</string>
    <string name="text_explain_require_gps_permission">To scan the list of Wi-Fi networks, you need to enable location services.</string>
    <string name="text_connected">Connected</string>
    <string name="confirm_to_delete_all_tabs">Confirm to delete all tabs</string>
    <string name="yes">Yes</string>
    <string name="grant_permission_to_uninstall_protection">In order to prevent intruders from uninstalling the app, please activate Applock as “Device administrator”.</string>
    <string name="notice">Notice</string>
    <string name="turn_off">Turn off</string>
    <string name="confirm_to_off_protection">This will put your app at risk of being uninstalled by intruders, and you may lose all private fields.</string>
    <string name="lock_app" translatable="false">Lock App</string>
    <string name="private_browser" translatable="false">Private Browser</string>
    <string name="theme_changer" translatable="false">Theme Changer</string>
    <string name="get_premium">Get Premium</string>
    <string name="watch_a_video_to_get_more">Watch a video ad to get more.</string>
    <string name="watch_now">Watch now</string>
    <string name="loading_ads">Loading Ads. Please wait</string>
</resources>