<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black23253A"
    android:padding="@dimen/size_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_circle" />

    <include
        android:id="@+id/layout_native"
        layout="@layout/native_view_ads"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvClose" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/loading_ads"
        android:textColor="@color/grayC4CDE2"
        android:textSize="@dimen/text_size_14"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_native" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/watch_a_video_to_get_more"
        android:textColor="@color/grayC4CDE2"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoading" />

    <TextView
        android:id="@+id/tvGetPremium"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_52"
        android:layout_marginTop="@dimen/size_16"
        android:gravity="center"
        android:text="@string/get_premium"
        android:textColor="@color/yellowF3BB1C"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_52"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/bg_radius_100_color_blue"
        android:gravity="center"
        android:text="@string/watch_now"
        android:textColor="@color/grayC4CDE2"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>