<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24"
        android:text="@string/fake_icon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_50"
        android:layout_marginTop="@dimen/size_16"
        android:gravity="center"
        android:text="@string/fake_icon_dec"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/label_default"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDec" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclDefaultIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:clipToPadding="false"
        android:paddingStart="@dimen/size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDefault" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/photos"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rclDefaultIcon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_add_icon"
        app:layout_constraintStart_toStartOf="@+id/tvPhotos"
        app:layout_constraintTop_toBottomOf="@id/tvPhotos" />

    <include
        android:id="@+id/imgCurrentPhoto"
        layout="@layout/item_icon"
        android:layout_width="@dimen/size_52"
        android:layout_height="@dimen/size_52"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginTop="@dimen/size_8"
        app:layout_constraintStart_toEndOf="@+id/imgAdd"
        app:layout_constraintTop_toBottomOf="@id/tvPhotos" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginBottom="@dimen/size_24"
        android:background="@drawable/bg_radius_100_color_blue"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>