<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/size_24">

    <ImageView
        android:layout_width="@dimen/size_56"
        android:layout_height="@dimen/size_56"
        android:layout_marginTop="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_8"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toTopOf="@id/tv_request_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_request_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8"
        android:text="@string/request_access"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_message_need_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_message_need_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_10"
        android:text="@string/message_explain_require_location_permission"
        android:textColor="@color/grayC4CDE2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/rl_why_need_permission" />

    <RelativeLayout
        android:id="@+id/rl_why_need_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_10"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_message">

        <ImageView
            android:id="@+id/iv_question_mark"
            android:layout_width="@dimen/size_14"
            android:layout_height="@dimen/size_14"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_question_mark" />

        <TextView
            android:id="@+id/tv_why_need_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_4"
            android:layout_toStartOf="@id/iv_arrow_down"
            android:layout_toEndOf="@id/iv_question_mark"
            android:text="@string/text_why_need_location_permission"
            android:textColor="@color/grayC4CDE2"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_arrow_down"
            android:layout_width="@dimen/size_14"
            android:layout_height="@dimen/size_14"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_down" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_detail_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_40"
        android:layout_marginEnd="@dimen/size_40"
        android:layout_marginBottom="@dimen/size_16"
        android:text="@string/detail_message_explain_require_location_permission"
        android:textColor="@color/grayC4CDE2"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_go_to_settings" />

    <TextView
        android:id="@+id/tv_go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_24"
        android:background="@drawable/bg_button_gradient"
        android:gravity="center"
        android:padding="@dimen/size_16"
        android:text="@string/go_to_setting"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
